Principio de Notificacion

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -14,4 +14,5 @@
     <string name="u_text">D</string>
     <string name="edit_text">Editar</string>
     <string name="delete_text">Eliminar</string>
+    <string name="turnOff_text">Apagar</string>
 </resources>
