--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="edit_text">Edit</string>
     <string name="delete_text">Delete</string>
     <string name="turnOff_text">Turn Off</string>
+    <string name="postpone_text">Postpone</string>
 </resources>
