Inicio de la implementacion de la fecha, mejora y simplificacion del codigo, refactor de Date a Fecha. Seguimos con el bug.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="delete_text">Delete</string>
     <string name="turnOff_text">Turn Off</string>
     <string name="postpone_text">Postpone</string>
+    <string name="daysOrDate_text">Days or Date</string>
 </resources>
