--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -16,4 +16,5 @@
     <string name="delete_text">Eliminar</string>
     <string name="turnOff_text">Apagar</string>
     <string name="postpone_text">Posponer</string>
+    <string name="daysOrDate_text">Dias o fecha</string>
 </resources>
