Fecha funcionando, bug de posponer tambien en fecha, añadido spinners, inicio de soporte para notificacion antes de sonar la alarma.

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -17,4 +17,6 @@
     <string name="turnOff_text">Apagar</string>
     <string name="postpone_text">Posponer</string>
     <string name="daysOrDate_text">Dias o fecha</string>
+    <string name="notificationPreRing_text">Notificacion antes de que suene</string>
+    <string name="minutes_text">minuto/s</string>
 </resources>
