--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -20,4 +20,5 @@
     <string name="notificationPreRing_text">Notificacion antes de que suene</string>
     <string name="minutes_text">minuto/s</string>
     <string name="alarmWillSound_text">La Alarma sonará a las</string>
+    <string name="action_about_text">Acerca de</string>
 </resources>
