--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,6 @@
     <string name="minutes_text">minute/s</string>
     <string name="alarmWillSound_text">Alarm is ringing at</string>
     <string name="action_about_text">About</string>
+    <string name="ringtone_text">Ringtone</string>
+    <string name="addRingtone_text">Add Ringtone</string>
 </resources>
