--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <string name="google_place_api" translatable="false">AIzaSyCP2MlxpOH--w9tX-IEt0-v8pmlCw8qSoI</string>
     <string name="app_name">WACL</string>
     <string name="action_settings">Settings</string>
     <string name="button_cancel_text">Cancel</string>
@@ -24,4 +25,8 @@
     <string name="addRingtone_text">Add Ringtone</string>
     <string name="permisionGranted_text">Permision Granted</string>
     <string name="permisionDenied_text">Permision Denied</string>
+    <string name="defaultConfiguration_text">Default Configuration</string>
+    <string name="setADefaultLocation_text">Set a default location</string>
+    <string name="noSelectedPlace_text">No Selected place</string>
+    <string name="setALocation_text">Set a location</string>
 </resources>
